# sly

./: README.md  pyproject.toml
.github/workflows/: publish.yml
sly_cli/: Bot.py  main.py  req_gitignore.py  ytdl.py
