[tool.poetry]
name = "sly"
version = "0.1.0"
description = ""
authors = ["All <allmacdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.8.3"
typer = "^0.12.5"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
